--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://Ghoster23.github.io/PokeMacrosJoyConDroid",
+  "homepage": "https://ghoster23.github.io/PokemonMacrosJoyConDroid",
   "devDependencies": {
     "gh-pages": "^2.2.0"
   }
